# MyCoro

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  Logger.hpp  Task.hpp
test/: CMakeLists.txt  main.cpp  test_task.cpp
