cmake_minimum_required(VERSION 3.24)
project(MyCoro)

set(CMAKE_CXX_STANDARD 20)
find_package(spdlog REQUIRED)
find_package(doctest REQUIRED)
#add_compile_options(-fsanitize=address)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
add_subdirectory(src)
add_subdirectory(test)
add_executable(coro_main main.cpp)
target_link_libraries(coro_main PRIVATE coro)